[package]
name = "did-explorer"
version = "0.2.0"
authors = ["huhn <huhn.dev@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = { version = "^0.17", features = ["web_sys"] }
# css-in-rust = { version = "0.4.1", features = ["yew_integration"] }

anna_design_system = { git = "https://github.com/open-marketplace-applications/anna", branch = "dev" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]

